--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,10 @@
     <string name="invalid_coding_string">Image coding not recognized</string>
     <string name="taken_photo_text">Here is the taken photo</string>
     <string name="no_qr_text">No QR code found in the image</string>
+    <string name="welcome_string">Welcome</string>
+    <string name="instructions_string">Please Log In or Sign Up</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="signup_string">Sign Up</string>
+    <string name="login_string">Log In</string>
 </resources>
