--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,7 @@
     <string name="delete">DELETE</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="create_new_collection_header">Create New Collection</string>
+    <string name="create_new_item_header">Create New Item</string>
 
 </resources>
