--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,7 @@
     <string name="cancel">Cancel</string>
     <string name="create_new_collection_header">Create New Collection</string>
     <string name="create_new_item_header">Create New Item</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 </resources>
