Add functionality to delete Can delete from ItemView or RV Add confirm popup when deleting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,6 @@
     <string name="create_new_item_header">Create New Item</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="confirm_delete">Are you sure you want to delete?</string>
 
 </resources>
