--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,5 +134,8 @@
     <string name="unknown_type">Unknown Type</string>
     <string name="item">Item</string>
     <string name="collection">Collection</string>
+    <string name="owner">Owner</string>
+    <string name="new_collaborator">New Collaborator</string>
+    <string name="add">Add</string>
 
 </resources>
