--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,7 +135,7 @@
     <string name="item">Item</string>
     <string name="collection">Collection</string>
     <string name="owner">Owner</string>
-    <string name="new_collaborator">New Collaborator</string>
+    <string name="new_collaborator">New Collaborator Email</string>
     <string name="add">Add</string>
 
 </resources>
