--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,5 +138,6 @@
     <string name="owner">Owner</string>
     <string name="new_collaborator">New Collaborator Email</string>
     <string name="add">Add</string>
+    <string name="set_image_text">Change Image</string>
 
 </resources>
