--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
     <string name="new_collaborator">New Collaborator Email</string>
     <string name="add">Add</string>
     <string name="set_image_text">Change Image</string>
+    <string name="save_image_string">Save Image</string>
 
 </resources>
