--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,5 +140,8 @@
     <string name="add">Add</string>
     <string name="set_image_text">Change Image</string>
     <string name="save_image_string">Save Image</string>
+    <string name="change_image_string">Change Image</string>
+    <string name="gen_qr_code_string">Generate QR Code</string>
+    <string name="collaboration_string">Collaboration</string>
 
 </resources>
